--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask==3.1.0
+Flask-SocketIO==5.5.1
+eventlet==0.40.0
+flask-cors==6.0.0
+requests==2.32.5
 paramiko==3.5.1
 pywebview==5.4
 PyQt6==6.9.0
-PyQt6-Qt6==6.9.0
 PyQt6-WebEngine==6.9.0
-PyQt6-WebEngine-Qt6==6.9.0
-PyQt6-sip==13.10.0
-QtPy==2.4.3
